--- a/main/Makefile
+++ b/main/Makefile
@@ -37,9 +37,9 @@ XINC=/usr/include
 XLIBDIR = /usr/lib64
 
 ifneq ($(TRIANGLEHOME),)
-  TRIANGLEINCLUDE = -I$(TRIANGLEHOME)
-  TRIANGLELIB = $(TRIANGLEHOME)/triangle.o
-  TRIANGLELIBDIR = -L$(TRIANGLEHOME)
+  TRIANGLEINCLUDE =
+  TRIANGLELIB = -ltriangle-1.6
+  TRIANGLELIBDIR =
   TRIANGLELD = 
   TRIANGLESRC = triangulate.c
 else
